k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-cloudflare
    kubernetes.io/ingress.class: traefik
spec:
  tls:
  - hosts:
    - teg.olszewskib.org
    secretName: teg-tls
  rules:
  - host: teg.olszewskib.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 8501
